# book

./: README.md  pyproject.toml  requirements.txt
book/api/: generator_code.py  serializers.py  tests.py  urls.py  views.py
book/book/: settings.py
book/books/: models.py
book/books/migrations/: 0001_initial.py  0002_books_author.py  0002_initial.py
book/users/: models.py
book/users/migrations/: 0001_initial.py  0002_alter_user_date_birth.py  0003_alter_user_date_birth.py  0004_alter_user_email.py  0005_alter_user_first_name_alter_user_last_name.py  0006_alter_user_first_name_alter_user_last_name.py  0007_alter_user_first_name_alter_user_last_name.py  0008_alter_user_email.py  0009_alter_user_email.py
books_project/api/: generator_code.py  permissions.py  tests.py  urls.py  views.py
books_project/books/: admin.py  models.py
books_project/books/migrations/: 0001_initial.py  0002_books_author.py
books_project/books_project/: settings.py
books_project/users/migrations/: 0001_initial.py
tests/: test_book.py
